<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    tools:showIn="navigation_view"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://schemas.android.com/tools ">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_action_folder_shared"
            android:title="@string/nav_user" />
        <item
            android:id="@+id/nav_work_out"
            android:icon="@drawable/ic_action_pesa2"
            android:title="@string/nav_work_out" />
        <item
            android:id="@+id/nav_result"
            android:icon="@drawable/ic_action_assessment"
            android:title="@string/nav_result" />
    </group>

    <item android:title="@string/title_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_action_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_action_screen_share"
                android:title="@string/nav_send" />
        </menu>
    </item>

</menu>
